[package]
name = "projet_rsns_morissetlarresacha"
version = "0.1.0"
edition = "2024"

[features]
default = ["alloc"]
std = ["alloc"]      
alloc = []             

[dependencies]
heapless = { version = "0.9.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde-json-core = { version = "0.6.0", default-features = false }
time = { version = "0.3.44", default-features = false, features = ["macros", "alloc"] }

[[bin]]
name = "projet_rsns_morissetlarresacha"
path = "src/main.rs"